[options]
  zip_safe = False
  install_requires =
    astropy==4.1
    asyncio==3.4.3
    cupy-cuda92==8.6.0
    numpy==1.19.5
    matplotlib==3.0.3
    pillow<7.0.0
    h5py==2.10.0
    keras==2.0.8
    tensorflow==1.12.0
    pandas==1.0.5
    retry==0.9.2
    scipy==1.5.4
    pika==1.2.0
    pytest==7.0.1
    pytest-cov==3.0.0
    pygedm==3.1.3 
    iqrm
    psrmatch @ git+https://bitbucket.org/jankowsk/psrmatch.git@master 
    FRBID @ git+https://github.com/Zafiirah13/FRBID.git@array_read
